# ROS-2-Practice

./: README.md
robot_basics/: CMakeLists.txt  package.xml
robot_basics/config/: params.yaml
robot_basics/launch/: param_node_v1_launch.py  param_node_v2_launch.py  pub_sub_v1_launch.py  pub_sub_v2_launch.py
robot_basics/src/: executors.cpp  logger.cpp  logger_class.cpp  param_reader.cpp  publisher_class.cpp  subscriber_class.cpp
robot_bt_bumpgo/: CMakeLists.txt  package.xml
robot_bt_bumpgo/behavior_tree_xml/: bumpgo.xml
robot_bt_bumpgo/include/robot_bt_bumpgo/: Back.hpp  Forward.hpp  IsObstacle.hpp  Turn.hpp
robot_bt_bumpgo/src/robot_bt_bumpgo/: Back.cpp  Forward.cpp  IsObstacle.cpp  Turn.cpp
robot_fsm_bumpgo_cpp/: CMakeLists.txt  package.xml
robot_fsm_bumpgo_cpp/include/robot_fsm_bumpgo_cpp/: BumpGoNode.hpp
robot_fsm_bumpgo_cpp/launch/: bump_and_go.launch.py
robot_fsm_bumpgo_cpp/src/: bumpgo_main.cpp
robot_fsm_bumpgo_cpp/src/robot_fsm_bumpgo_cpp/: BumpGoNode.cpp
robot_fsm_bumpgo_py/: package.xml  setup.cfg  setup.py
robot_fsm_bumpgo_py/launch/: bump_and_go.launch.py
robot_fsm_bumpgo_py/robot_fsm_bumpgo_py/: bump_go_main.py
robot_tf2_detector/: CMakeLists.txt  package.xml
robot_tf2_detector/include/robot_tf2_detector/: ObstacleDetectorImprovedNode.hpp  ObstacleDetectorNode.hpp  ObstacleMonitorNode.hpp
robot_tf2_detector/launch/: detector_basic.launch.py  detector_improved.launch.py
robot_tf2_detector/src/: detector_improved_main.cpp  detector_main.cpp
robot_tf2_detector/src/robot_tf2_detector/: ObstacleDetectorImprovedNode.cpp  ObstacleDetectorNode.cpp  ObstacleMonitorNode.cpp
robot_tracking/: CMakeLists.txt  package.xml
robot_tracking/include/robot_tracking/: HeadController.hpp  ObjectDetector.hpp  PIDController.hpp
robot_tracking/launch/: tracking.launch.py
robot_tracking/src/: object_detector_main.cpp  object_tracker_main.cpp
robot_tracking/src/robot_tracking/: HeadController.cpp  ObjectDetector.cpp  PIDController.cpp
robot_tracking/tests/: pid_test.cpp
robot_tracking_msgs/: CMakeLists.txt  package.xml
robot_vff_avoidance/: CMakeLists.txt  package.xml
robot_vff_avoidance/include/robot_vff_avoidance/: AvoidanceNode.hpp
robot_vff_avoidance/launch/: avoidance_vff.launch.py
robot_vff_avoidance/src/: avoidance_vff_main.cpp
robot_vff_avoidance/src/robot_vff_avoidance/: AvoidanceNode.cpp
robot_vff_avoidance/tests/: CMakeLists.txt  vff_test.cpp
